# openBIS2SQLite

./: .gitignore  CITATION.cff  README.md  environment.yml  pyproject.toml
.conda/: meta.yaml  meta.yml
.github/workflows/: publish_conda.yml  run_tests.yml
src/: classes.py  cleaning.py  constants.py  dump_object.py  log.txt  main.py
src/openbis2sqlite/: classes.py  cleaning.py  main.py
tests/: test_classes.py  test_cleaning.py
tests/test_data/inserts/: insert.sql  insert_out.sql  insert_phone.sql  insert_phone_out.sql  insert_tsvec.sql  insert_tsvec_out.sql
tests/test_data/tables/: table.sql  table_out.sql  table_tsvec.sql  table_tsvec_out.sql
